--- a/frontend/css/tools-footer.css
+++ b/frontend/css/tools-footer.css
@@ -39,4 +39,5 @@
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: var(--rounded-md);
   padding: 0.5rem;
+  margin-bottom: 1rem;
 }
